--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
         android:id="@+id/imgbtnHuella"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/button_finger"
+        android:background="@drawable/ic_baseline_fingerprint_24"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.595"
@@ -105,7 +105,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.129"
-        app:srcCompat="@drawable/face"/>
+        app:srcCompat="@drawable/background" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="300dp"
