--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
         app:layout_constraintVertical_bias="0.859"
-        app:srcCompat="@drawable/imgMapa" />
+        app:srcCompat="@drawable/imgmapa" />
 
     <View
         android:id="@+id/divider2"
