cambio de logo y nombre de la app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre de la APP"
+        android:text="¿Dónde estás?"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold"
